Add copyright markup and styles

--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
 		run
 	</button>
 
+	<a
+	    class="copyright"
+	    href="https://github.com/vovanr/yes-all-not"
+	    target="_blank"
+	    rel="noopener noreferrer"
+		tabindex="-1"
+	    >
+	    <span class="copyright__license">MIT ©</span> <span class="copyright__author">Vladimir Rodkin</span>
+	</a>
+
 	<script src="index.js"></script>
 </body>
 
