--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 		<textarea
 			class="c__input"
 			id="yes"
+			tabindex="1"
+			autofocus="on"
 			></textarea>
 	</div>
 
@@ -72,6 +74,7 @@
 		<textarea
 			class="c__input"
 			id="all"
+			tabindex="1"
 			></textarea>
 	</div>
 
@@ -103,12 +106,14 @@
 			class="c__input"
 			id="not"
 			readonly
+			tabindex="1"
 			></textarea>
 	</div>
 
 	<button
 		id="run"
 		type="button"
+		tabindex="2"
 		>
 		run
 	</button>
