--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 	<meta name="description" content="Filter not selected list items">
 	<meta name="keywords" content="">
 
+	<link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
+	<link rel="manifest" href="public/site.webmanifest">
+	<link rel="mask-icon" href="public/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="public/favicon.ico">
+	<meta name="msapplication-TileColor" content="#603cba">
+	<meta name="msapplication-config" content="public/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+
 	<link href="index.css" rel="stylesheet">
 </head>
 
